# RUPP-G8

Y3 S2/CG/OpenGL project template/: CMakeLists.txt
Y3 S2/CG/OpenGL project template/dependencies/glad/: glad.h
Y3 S2/CG/OpenGL project template/src/: glad.c  main.cpp
Y3 S2/DesignLab/: settings.gradle
Y3 S2/DesignLab/app/: build.gradle
Y3 S2/DesignLab/app/src/main/: AndroidManifest.xml
Y3 S2/DesignLab/app/src/main/java/com/example/designlab/: MainActivity.java
Y3 S2/DesignLab/app/src/main/res/drawable/: backgroundgray.xml  backgroundred.xml
Y3 S2/DesignLab/app/src/main/res/layout/: activity_main.xml
Y3 S2/DesignLab/app/src/main/res/layout/SpannableHelper/: java.kt
Y3 S2/DesignLab/app/src/main/res/values/: strings.xml  themes.xml
Y3 S2/DesignLab/app/src/main/res/values-night/: themes.xml
Y3 S2/DesignLab/gradle/wrapper/: gradle-wrapper.properties
Y3 S2/ENGLISH/: TS_U7_WQ.docx  TS_U8_WQ.docx
Y3 S2/Project-MAD/: settings.gradle
Y3 S2/Project-MAD/app/: build.gradle
Y3 S2/Project-MAD/app/src/androidTest/java/com/example/designprofilefacebook/: ExampleInstrumentedTest.java
Y3 S2/Project-MAD/app/src/main/: AndroidManifest.xml
Y3 S2/Project-MAD/app/src/main/res/values/: strings.xml  themes.xml
Y3 S2/Project-MAD/app/src/main/res/values-night/: themes.xml
Y3 S2/Project-MAD/app/src/test/java/com/example/designprofilefacebook/: ExampleUnitTest.java
Y3 S2/Project-MAD/gradle/wrapper/: gradle-wrapper.properties
Y3 S2/WCT II/Quiz & Homework/Week2-Assignment-Thursday/: login.php  process_login.php
